# rl-texplore-ros-pkg

./: .gitignore  ProjectHome.md  README
.catkin_tools/profiles/default/: devel_collisions.txt
logs/rl_agent/: build.make.000.log.stderr
rl_agent/: CMakeLists.txt
rl_agent/include/rl_agent/: Dyna.hh  QLearner.hh  SavedPolicy.hh
rl_agent/src/Agent/: DiscretizationAgent.cc  QLearner.cc
rl_agent/src/Models/: C45Tree.cc  ExplorationModel.cc  ExplorationModel.hh  LinearSplitsTree.cc  LinearSplitsTree.hh  M5Tree.hh  MultipleClassifiers.cc  MultipleModels.cc  MultipleModels.hh  SepPlanExplore.cc  Stump.cc  Stump.hh
rl_agent/src/Planners/: ETUCT.cc  PO_ParallelETUCT.cc  PO_ParallelETUCT.hh  ParallelETUCT.cc  PolicyIteration.cc  PrioritizedSweeping.hh  ValueIteration.cc
rl_agent/src/newmat/: include.h
rl_common/: CMakeLists.txt
rl_common/include/rl_common/: ExperienceFile.hh  Random.h
rl_env/: CMakeLists.txt
rl_env/include/rl_env/: LightWorld.hh  gridworld.hh
rl_env/src/: env.cpp
rl_env/src/Env/: CartPole.cc  FuelRooms.cc  LightWorld.cc  taxi.cc
rl_experiment/: CMakeLists.txt  mainpage.dox
rl_experiment/src/: rl.cc
rl_msgs/: CMakeLists.txt
rl_msgs/msg/: RLAction.msg  RLStateReward.msg
src/rl_agent/: package.xml
src/rl_agent/include/rl_agent/: DiscretizationAgent.hh  Dyna.hh  ModelBasedAgent.hh  QLearner.hh  Sarsa.hh  SavedPolicy.hh
src/rl_agent/src/: agent.cpp
src/rl_agent/src/Agent/: DiscretizationAgent.cc  Dyna.cc  ModelBasedAgent.cc  QLearner.cc  Sarsa.cc  SavedPolicy.cc
src/rl_agent/src/Models/: C45Tree.cc  C45Tree.hh  ExplorationModel.cc  FactoredModel.cc  FactoredModel.hh  LinearSplitsTree.cc  M5Tree.cc  MultipleClassifiers.cc  MultipleModels.cc  RMaxModel.cc  RMaxModel.hh  SepPlanExplore.hh  Stump.cc  Stump.hh
src/rl_agent/src/Planners/: ETUCT.cc  ETUCT.hh  MBS.hh  PO_ETUCT.cc  PO_ETUCT.hh  PO_ParallelETUCT.cc  PO_ParallelETUCT.hh  ParallelETUCT.cc  ParallelETUCT.hh  PolicyIteration.cc  PolicyIteration.hh  PrioritizedSweeping.cc  ValueIteration.cc  ValueIteration.hh
src/rl_common/: package.xml
src/rl_common/include/rl_common/: ExperienceFile.hh  Random.h  core.hh
src/rl_env/: mainpage.dox  package.xml
src/rl_env/include/rl_env/: MountainCar.hh  energyrooms.hh
src/rl_env/src/: env.cpp
src/rl_env/src/Env/: FuelRooms.cc  LightWorld.cc  MountainCar.cc  RobotCarVel.cc  energyrooms.cc  fourrooms.cc
src/rl_experiment/: CMakeLists.txt  package.xml
src/rl_experiment/src/: rl.cc
src/rl_msgs/: package.xml
src/rl_msgs/msg/: RLEnvSeedExperience.msg  RLExperimentInfo.msg
stacks/reinforcement_learning/: stack.xml
stacks/reinforcement_learning/rl_agent/: CMakeLists.txt  mainpage.dox  manifest.xml
stacks/reinforcement_learning/rl_agent/include/rl_agent/: DiscretizationAgent.hh  ModelBasedAgent.hh
stacks/reinforcement_learning/rl_agent/src/: agent.cpp
stacks/reinforcement_learning/rl_agent/src/Agent/: DiscretizationAgent.cc  Dyna.cc  ModelBasedAgent.cc  ModelBasedAgent.hh  QLearner.cc  QLearner.hh  Sarsa.cc  SavedPolicy.cc  SavedPolicy.hh
stacks/reinforcement_learning/rl_agent/src/Common/: ExperienceFile.hh
stacks/reinforcement_learning/rl_agent/src/Models/: C45Tree.cc  C45Tree.hh  ExplorationModel.cc  ExplorationModel.hh  FactoredModel.cc  FactoredModel.hh  LinearSplitsTree.hh  M5Tree.hh  MDPTree.cc  MultipleClassifiers.cc  MultipleClassifiers.hh  RMaxModel.cc  RMaxModel.hh  SepPlanExplore.hh  Stump.hh
stacks/reinforcement_learning/rl_agent/src/Planners/: ETUCT.cc  ETUCT.hh  MBS.cc  MBS.hh  PO_ETUCT.hh  PO_ParallelETUCT.cc  PO_ParallelETUCT.hh  ParallelETUCT.cc  ParallelETUCT.hh  PolicyIteration.hh  PrioritizedSweeping.cc  PrioritizedSweeping.hh  ValueIteration.hh
stacks/reinforcement_learning/rl_agent/src/newmat/: module.mk
stacks/reinforcement_learning/rl_common/: mainpage.dox
stacks/reinforcement_learning/rl_common/include/rl_common/: core.hh
stacks/reinforcement_learning/rl_env/: CMakeLists.txt  mainpage.dox  manifest.xml
stacks/reinforcement_learning/rl_env/include/rl_env/: RobotCarVel.hh  taxi.hh
stacks/reinforcement_learning/rl_env/src/: env.cpp
stacks/reinforcement_learning/rl_env/src/Env/: CartPole.cc  FuelRooms.hh  MountainCar.cc  MountainCar.hh  RobotCarVel.cc  RobotCarVel.hh  energyrooms.cc  fourrooms.cc  gridworld.cc  gridworld.hh  taxi.cc  tworooms.cc  tworooms.hh
stacks/reinforcement_learning/rl_experiment/: CMakeLists.txt  mainpage.dox  manifest.xml
stacks/reinforcement_learning/rl_experiment/src/: rl.cc
stacks/reinforcement_learning/rl_msgs/: mainpage.dox  manifest.xml
stacks/reinforcement_learning/rl_msgs/msg/: RLEnvDescription.msg
trunk/: README
trunk/stacks/reinforcement_learning/: stack.xml
trunk/stacks/reinforcement_learning/rl_agent/: CMakeLists.txt  mainpage.dox  manifest.xml
trunk/stacks/reinforcement_learning/rl_agent/include/rl_agent/: ModelBasedAgent.hh  Sarsa.hh
trunk/stacks/reinforcement_learning/rl_agent/src/: agent.cpp
trunk/stacks/reinforcement_learning/rl_agent/src/Agent/: DiscretizationAgent.hh  Dyna.hh  ModelBasedAgent.cc  ModelBasedAgent.hh  QLearner.hh  SavedPolicy.cc
trunk/stacks/reinforcement_learning/rl_agent/src/Common/: ExperienceFile.cc  Random.cc
trunk/stacks/reinforcement_learning/rl_agent/src/Models/: C45Tree.cc  C45Tree.hh  ExplorationModel.hh  FactoredModel.cc  M5Tree.cc  MDPTree.hh  MultipleClassifiers.hh  MultipleModels.hh  RMaxModel.hh  SepPlanExplore.cc  SepPlanExplore.hh
trunk/stacks/reinforcement_learning/rl_agent/src/Planners/: ETUCT.cc  ETUCT.hh  ETUCTCompleteModel.cc  ETUCTCompleteModel.hh  MBS.hh  PO_ETUCT.cc  PO_ETUCT.hh  PO_ParallelETUCT.cc  PO_ParallelETUCT.hh  ParallelETUCT.cc  ParallelETUCT.hh  (+3 more)
trunk/stacks/reinforcement_learning/rl_common/: mainpage.dox  manifest.xml
trunk/stacks/reinforcement_learning/rl_env/: CMakeLists.txt  mainpage.dox  manifest.xml
trunk/stacks/reinforcement_learning/rl_env/src/: env.cpp
trunk/stacks/reinforcement_learning/rl_experiment/: mainpage.dox  manifest.xml
trunk/stacks/reinforcement_learning/rl_experiment/src/: rl.cc
trunk/stacks/reinforcement_learning/rl_msgs/: manifest.xml
(+21 files in other folders)
