<package>
  <name>rl_env</name>
  <version>0.0.0</version>
  <description>rl_env is is a package containing reinforcement learning (RL) environments.</description>

  <maintainer email="todd.hester@gmail.com">Todd Hester</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rl_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rl_common</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rl_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rl_common</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include"
        lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib"/>
  </export>

</package>
