<package>

  <name>rl_msgs</name>
  <version>0.0.0</version>
  <description>"TODO"</description>

  <author>Michael Quinlan, Todd Hester</author>
  <maintainer email="todo@todo.todo">alex</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>


</package>


